# mcms-118

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
docs/: ARCHITECTURE.md  BOUNDARIES.md  CLAIM_BOUNDARY_STANDARD.md  COMPLETE_BLUEPRINT.md  DEVELOPMENT_MODEL_COMPARISON.md  EVIDENCE_STANDARD.md  IMPLEMENTATION_STATUS.md  MODULE_INDEX.md  MSPEE_ELEMENT_ENGINE.md  NAMING_STANDARD.md  PHASES.md  PHASE_METADATA_INDEX.md  PHASE_METADATA_SCHEMA.json  PHASE_REGISTRY.json  PROJECT_HISTORY.md  PUSH_TO_GITHUB.md  RELEASE_POLICY.md  REPO_STANDARD_CHECKLIST.md  ROADMAP.md  STANDARDS_PROFILE.md  SYMBOLIC_CAUSAL_FOUNDATION.md
examples/: chemistry_claim_audit_demo.py
scripts/: check_element_level2_drift.py  check_element_physical_property_drift.py  check_element_snapshot_drift.py  verify_repo.py
tests/: test_atom_behavior.py  test_atom_behavior_gap.py  test_claim_boundary.py  test_complete_registry.py  test_element_behavior_tags.py  test_element_configuration_evidence.py  test_element_dashboard.py  test_element_evidence.py  test_element_frontier_valence.py  test_element_graph.py  test_element_instances.py  test_element_level2_drift.py  test_element_level2_snapshot.py  test_element_oxidation_evidence.py  test_element_phase3.py  test_element_physical_property_drift.py  test_element_promotion_decision.py  test_element_promotion_readiness.py  test_element_relation_overlay.py  test_local_api.py  (+13 more)
(+522 files in other folders)
