[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcms-118"
version = "0.1.0"
description = "MSPEE-118 Element Engine: standalone source-backed periodic-table element records"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "Tamirat Wube"}]
keywords = ["periodic-table", "elements", "chemistry", "evidence", "audit", "mspee", "mcms"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "jsonschema>=4"]

[project.urls]
Homepage = "https://github.com/tamirat-wubie/mcms-118"
Repository = "https://github.com/tamirat-wubie/mcms-118"
Issues = "https://github.com/tamirat-wubie/mcms-118/issues"

[project.scripts]
mcms = "mcms.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
